# battleships

./: app.py  pyproject.toml  readme.md
app/: app.py
app/board/: board.py
app/player/: player.py
app/ship/: ship.py
