[tool.poetry]
name = "battleships"
version = "1.0.1"
description = "Search and destroy the ships"
authors = ["Juan Manuel Civico Cabrera <juanmacivico87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"